# clutter-segmentation

./: .gitignore  .rosinstall  BA.mm  README  clutter-segmentation.rosinstall  ctags.bash  indent.bash  install  install.bash
clutseg/: CMakeLists.txt  CMakeListsTest.txt  mainpage.dox  manifest.xml  migrate.sql  rosdep.yaml  rosdoc.yaml  schema.sql  test.bash  updatedb.bash
clutseg/apps/: assemble_model.cpp  blackbox_recognizer.cpp  clutsegmenter.cpp  clutsegmenter_node.cpp  collect_ground_truth.cpp  detect_features.cpp  draw_coordinate_histogram.cpp  draw_correspondences.cpp  draw_ground_truth.cpp  enqueue_experiments.cpp  experiment_enqueue.cpp  experiment_runner.cpp  fixmask.cpp  ground_truth_collector.cpp  keypoints_image.cpp  keypoints_viewer.cpp  migrate_to_labelset.cpp  param_inserter.cpp  param_selection.cpp  pose_to_posert.cpp  poseinfo.cpp  poserandomizer.cpp  posetester.cpp  poseviewer.cpp  run_experiments.cpp  siftmask.cpp  view_correspondences.cpp  xyz_to_xyzrgb.cpp
clutseg/data/: clutsegmenter_node.vcg  example.ground.pose.yaml  features.config.yaml  image_00000.marker.xcf  image_00000.png.pose.yaml  image_00042.png.pose.yaml  paramsel.sql  paramsel.sqlite3  sps.detect.config.yaml  sps.features.config.yaml  sps.refine.config.yaml  test.sql  test.sqlite3  test_clutseg.detect.config.yaml  test_clutseg.features.config.yaml  test_clutseg.locate.config.yaml  test_clutseg.refine.config.yaml  tod.config.yaml
clutseg/include/clutseg/: check.h  clutseg.h  common.h  conn_comp.h  db.h  experiment.h  flags.h  gcc_diagnostic_disable.h  gcc_diagnostic_enable.h  ground.h  map.h  modelbase.h  options.h  paramsel.h  pcl_visualization_addons.h  pose.h  pose_util.h  query.h  ranking.h  report.h  response.h  result.h  runner.h  sipc.h  storage.h  testdesc.h  viz.h
clutseg/launch/: clutsegmenter_node.launch
clutseg/schema/: experiment.sql  paramset.sql  pms_clutseg.sql  pms_fe.sql  pms_guess.sql  pms_match.sql  response.sql  schema.sql
clutseg/scripts/: bag-extract-images  bag-extract-images.py  base-dump  base-pose  blackbox-demo  blackbox-eval  blackbox-recognizer-demo  blackbox-result-montage  blackbox-result-symlinks  common  ground-truth-statistics  ground-truth-statistics.py  ias-kinect-get  ias-kinect-test  ias-rename-topics-hack  ias-rename-topics-hack.py  mods-link  poserandomization-run.py  poserandomization.py  result-best-succ-rate  result-best-succ-rate.R  result-corr-succ-rate  result-corr-succ-rate.R  result-html  result-montage  result-roc  result-roc.R  run-experiments  rviz-show-tod-bag  semantic3d-get  semantic3d-visualize-model  semantic3d-visualize-model-view  stats_demo  test  tod-kinect-get  tod-recognizer-debug  train  train-detect  train-draw-blends  train-draw-keypoints  (+3 more)
clutseg/src/: check.cpp  clutseg.cpp  conn_comp.cpp  db.cpp  experiment.cpp  flags.cpp  ground.cpp  map.cpp  modelbase.cpp  options.cpp  paramsel.cpp  pcl_visualization_addons.cpp  pose.cpp  pose_util.cpp  ranking.cpp  report.cpp  response.cpp  result.cpp  runner.cpp  sipc.cpp  storage.cpp  testdesc.cpp  viz.cpp
clutseg/test/: test.cpp  test.h  test_clutseg.cpp  test_conn_comp.cpp  test_db.cpp  test_experiment.cpp  test_extractor.cpp  test_flags.cpp  test_ground.cpp  test_map.cpp  test_paramsel.cpp  test_pnp_ransac.cpp  test_pose.cpp  test_pose_util.cpp  test_ranking.cpp  test_response.cpp  test_runner.cpp  test_sqlite.cpp  test_storage.cpp  test_testdesc.cpp  test_viz.cpp
clutseg/view/: view.sql
clutseg_util/: CMakeLists.txt  CMakeListsTest.txt  manifest.xml  test.bash
clutseg_util/apps/: blackbox_recognizer.cpp  clutsegmenter.cpp  keypoints_viewer.cpp  poserandomizer.cpp  posetester.cpp  poseviewer.cpp  xyz_to_xyzrgb.cpp
clutseg_util/data/: camera.yml  testdesc.txt
clutseg_util/include/: clutseg.h  conn_comp.h  cv_util.h  drawpose.h  guess_util.h  map.h  mute.h  options.h  pcl_visualization_addons.h  pose_util.h  recorder.h  test_config.h  testdesc.h  viz.h
clutseg_util/include/clutseg/: clutseg.h  common.h  conn_comp.h  map.h  options.h  pcl_visualization_addons.h  testdesc.h  viz.h
clutseg_util/src/: clutseg.cpp  conn_comp.cpp  cv_util.cpp  drawpose.cpp  guess_util.cpp  map.cpp  mute.cpp  options.cpp  pcl_visualization_addons.cpp  pose_util.cpp  recorder.cpp  test_config.cpp  testdesc.cpp  viz.cpp
clutseg_util/test/: test.cpp  test.h  test_conn_comp.cpp  test_map.cpp  test_mute.cpp  test_testdesc.cpp  test_viz.cpp
mods/object_recognition/tod_detecting/: CMakeLists.txt
mods/object_recognition_experimental/rbrief/: CMakeLists.txt
object_recognition/dpm_detector/: CMakeLists.txt  ROS_BUILD_BLACKLIST  mainpage.dox  manifest.xml  nodelets.xml
object_recognition/dpm_detector/.svn/: all-wcprops  entries
object_recognition/fast_template_detector/: CMakeLists.txt  run_candidate_visualizer.sh  run_combine.sh  run_gradient_based_adaptive_template_learner.sh  run_gradient_discretizer.sh  run_multi_class_candidate_detector.sh  run_stereo.sh  run_triggered_bag_player.sh
object_recognition/fast_template_detector/.svn/: all-wcprops  entries
object_recognition/fast_template_detector/msg/: DOTDetectionResult.msg  ImageROI.msg  ObjectQueryResponse.msg  PerceptionData.msg  Template.msg  TemplateQuery.msg  (+1 more)
object_recognition/tod_training/: CMakeLists.txt  manifest.xml
semantic3d_training/: CMakeLists.txt  mainpage.dox  manifest.xml
semantic3d_training/apps/: poserandomizer.cpp  poseviewer.cpp  preparetraining.cpp  xyz_to_xyzrgb.cpp
semantic3d_training/data/: fat_free_milk_camera.yml  sample-recognizer-output-50320.txt  sample-truth.txt  sample.delimited.pcd  sample.delimited.rgb.pcd
semantic3d_training/include/: misc.h  pcl_visualization_addons.h  rotation.h
semantic3d_training/scripts/: gen_training_base_truth.py  recognizer_stats.py  simplerecognizer.py
semantic3d_training/src/: misc.cpp  pcl_visualization_addons.cpp  rotation.cpp
semantic3d_training/test/: test.h  test_bitset.cpp  test_filesystem.cpp  test_image_io.cpp  test_misc.cpp  test_pcl.cpp  test_pcl_visualization.cpp  test_pnp.cpp  test_random.cpp  test_rotation.cpp  test_yaml.cpp  utest.cpp
(+893 files in other folders)
